fixed header logo alignment

--- a/KickIt/static/css/header.css
+++ b/KickIt/static/css/header.css
@@ -32,12 +32,15 @@ nav {
 }
 
 .sticky_menu .menu_holder {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     padding-top: 12px;
-    max-width: 1250px;
+    max-width: 1050px;
     margin: 0 auto;
+}
+
+.sticky_menu .menu {
+    float: right;
+    padding-top: 15px;
 }
 
 .sticky_menu .menu ul li a {
@@ -58,7 +61,6 @@ nav {
 
 .sticky_menu .logo, .sticky_menu .menu {
     display: inline-block;
-    margin: 0 auto;
 }
 
 .sticky_menu .logo img {
@@ -79,7 +81,22 @@ nav {
     padding-right: 40px;
 }
 
+@media screen and (min-width: 726px) and (max-width: 1100px) {
+    .sticky_menu .logo {
+        padding-left: 40px;
+    }
+}
+
 @media screen and (max-width: 725px) {
+
+    .sticky_menu .menu_holder {
+        text-align: center;
+    }
+
+    .sticky_menu .logo {
+        padding-left: 60px;
+    }
+
 
     .hamburger {
         display: inline-block;
@@ -87,6 +104,7 @@ nav {
         width: 45px;
         height: 45px;
         background: #ffed00;
+        float: right;
     }
 
     .menu {
